[package]
authors = ['Parity Technologies <admin@parity.io>']
edition = '2018'
name = 'node-template-runtime'
version = '0.9.0'

[features]
default = ['std']
std = [
    'parity-codec/std',
    'primitives/std',
    'client/std',
    'rstd/std',
    'runtime-io/std',
    'support/std',
    'balances/std',
    'fees/std',
    'executive/std',
    'aura/std',
    'indices/std',
    'primitives/std',
    'system/std',
    'timestamp/std',
    'sudo/std',
    'version/std',
    'serde_derive',
    'serde/std',
    'safe-mix/std',
    'consensus-aura/std',
]
[dependencies.aura]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-aura'
rev = 'e22d2677eaa52614d4a211d366aa23dc7bcd0ed5'

[dependencies.balances]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-balances'
rev = 'e22d2677eaa52614d4a211d366aa23dc7bcd0ed5'

[dependencies.client]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-client'
rev = 'e22d2677eaa52614d4a211d366aa23dc7bcd0ed5'

[dependencies.consensus]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-consensus'
rev = 'e22d2677eaa52614d4a211d366aa23dc7bcd0ed5'

[dependencies.consensus-aura]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-consensus-aura-primitives'
rev = 'e22d2677eaa52614d4a211d366aa23dc7bcd0ed5'

[dependencies.executive]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-executive'
rev = 'e22d2677eaa52614d4a211d366aa23dc7bcd0ed5'

[dependencies.fees]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-fees'
rev = 'e22d2677eaa52614d4a211d366aa23dc7bcd0ed5'

[dependencies.indices]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-indices'
rev = 'e22d2677eaa52614d4a211d366aa23dc7bcd0ed5'

[dependencies.parity-codec]
default-features = false
features = ['derive']
version = '3.1'

[dependencies.primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'substrate-primitives'
rev = 'e22d2677eaa52614d4a211d366aa23dc7bcd0ed5'

[dependencies.rstd]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-std'
rev = 'e22d2677eaa52614d4a211d366aa23dc7bcd0ed5'

[dependencies.runtime-io]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-io'
rev = 'e22d2677eaa52614d4a211d366aa23dc7bcd0ed5'

[dependencies.runtime-primitives]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-primitives'
rev = 'e22d2677eaa52614d4a211d366aa23dc7bcd0ed5'

[dependencies.safe-mix]
default-features = false
version = '1.0'

[dependencies.serde]
default-features = false
version = '1.0'

[dependencies.serde_derive]
optional = true
version = '1.0'

[dependencies.sudo]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-sudo'
rev = 'e22d2677eaa52614d4a211d366aa23dc7bcd0ed5'

[dependencies.support]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-support'
rev = 'e22d2677eaa52614d4a211d366aa23dc7bcd0ed5'

[dependencies.system]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-system'
rev = 'e22d2677eaa52614d4a211d366aa23dc7bcd0ed5'

[dependencies.timestamp]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'srml-timestamp'
rev = 'e22d2677eaa52614d4a211d366aa23dc7bcd0ed5'

[dependencies.version]
default_features = false
git = 'https://github.com/paritytech/substrate.git'
package = 'sr-version'
rev = 'e22d2677eaa52614d4a211d366aa23dc7bcd0ed5'
